manifests/staging/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridfire-api
  labels:
    app: gridfire-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gridfire-api
  template:
    metadata:
      labels:
        app: gridfire-api
    spec:
      containers:
        - name: gridfire-api
          image: gridfire-api
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 1.5Gi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: gridfire-api
spec:
  selector:
    app: gridfire-api
  ports:
    - port: 5000
