manifests/staging/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/default-backend: gridfire-client
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - gridfire-dev.com
  #     secretName: tls-secret
  rules:
    - host: gridfire-dev.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: gridfire-api
                port:
                  number: 5000
            path: /api
          - pathType: Prefix
            backend:
              service:
                name: ipfs-node
                port:
                  number: 8080
            path: /ipfs
          - pathType: Prefix
            backend:
              service:
                name: gridfire-client
                port:
                  number: 80
            path: /
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
